	  boardctl() support is properly enabled (2015-03-31).
	* Move include/nuttx/timer.h, rtc.h and watchdog.h to include/nuttx/timers/.
	  (2015-04-01).
	* drivers/timer/cs2100-cp.c and include/nuttx/timers/cs2100-cp.h: Add a
	  very basic driver for the CS2100-CP Fractional-N Multipler chip (2015-04-02).
	* configs/, graphics/, include/nuttx:  More renaming: up_lcdinitialize->board_lcd_initialize,
	  up_lcdgetdev->board_lcd_getdev, up_lcduninitialize->board_lcd_uninitialize
	  (2015-04-04).
	* include/nuttx/nx, libnx/nx, libnx/nxtk: Add a new 'capped' parameter to
	  nx_drawline(), nxtk_drawlinetoolbar(), and nxtk_drawlinewindow()
	  (2015-04-05).
	* libnx/nx/nx_drawline.c, libnx/nxtk/nxtk_drawlinetoolbar.c and
	  nxtk_drawlinewindow.c: Implement line caps by drawing a file circle at
	  the each endpoint of a line with a radius equal to half of the width
	  of the line (2015-04-05).
	* include/time.h, nuttx/time.h, libc/time/lib_dayofweek.c and
	  lib_gmtimer.c: Implements CONFIG_TIME_EXTENDED as we discussed
	  relative to providing the last 3 members of the tm struct and support
	  for filling them in and even using the wday in the STM32 RTC. From
	  David Sidrane.
	* arch/arm/src/sam34/sam_serial.c and samv7/sam_serial.c:  A side-effect
	  of changing serial settings via TERMIOS (such as tcsetattr) is that
	  serial interrupts were being left disabled.  This is not a problem if
	  the serial configuration is changed when there are no open references
	  to the serial device.  In that case, serial interrupts are disabled and
	  will not be enabled enabled until the serial device is first opened.
	  But it is fatal if the serial device is already opened and if there is
	  a task waiting to receive data.  In that case, the side-effect of
	  disabling interrupts is fatal:  That task is then left hanging with
	  interrupts disabled (2015-04-08)
	* arch/arm/src/sama5/sam_serial.c:  Backport support for flowcontrol and
	  termios from SAM3/4 -- UNVERIFIED. (2015-04-08).