@@ -10122,3 +10122,7 @@
 	  interrupts disabled (2015-04-08)
 	* arch/arm/src/sama5/sam_serial.c:  Backport support for flowcontrol and
 	  termios from SAM3/4 -- UNVERIFIED. (2015-04-08).
+	* arch/arm/src/sam34/sam_serial.c and samv7/sam_serial.c: The IMR
+	  register is read-only.  This means that sam_restoreints() did not
+	  actually re-enable UART interrupts (2015-04-08).
+
